[Ritesh]add : Find Maximum Test Case Of The Maximum Genrics

--- a/FindMaximum/FindMaximum.csproj
+++ b/FindMaximum/FindMaximum.csproj
@@ -43,7 +43,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="integerfindmax.cs" />
+    <Compile Include="FindMaxGenrics.cs" />
+    <Compile Include="IntegerFindmMax.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
